chore: upgrade dependencies

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <mat-card-subtitle>{{module.subTitle}}</mat-card-subtitle>
   </mat-card-header>
   <div [align]="'center'">
-    <mat-icon style="font-size:5em;width:auto;">{{module.icon}}</mat-icon>
+    <mat-icon style="font-size:5em;width:auto;height:auto;">{{module.icon}}</mat-icon>
   </div>
   <mat-card-content>
     <p>{{module.description}}</p>
