--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,20 +12,20 @@
   <mat-sidenav #nav mode="side">
     <mat-nav-list>
       <mat-list-item routerLink="home" routerLinkActive="active" style="border-left-color:#f5f5f5;">
-        <mat-icon matListIcon>home</mat-icon>
-        <h1 matLine>Home</h1>
+        <mat-icon matListItemIcon>home</mat-icon>
+        <span matListItemTitle>Home</span>
       </mat-list-item>
       <mat-list-item routerLink="core" routerLinkActive="active" style="border-left-color:#00e1ff;">
-        <mat-icon matListIcon>build</mat-icon>
-        <h1 matLine>Core</h1>
+        <mat-icon matListItemIcon>build</mat-icon>
+        <span matListItemTitle>Core</span>
       </mat-list-item>
       <mat-list-item routerLink="files" routerLinkActive="active" style="border-left-color:#feff00;">
-        <mat-icon matListIcon>insert_drive_file</mat-icon>
-        <h1 matLine>Files</h1>
+        <mat-icon matListItemIcon>insert_drive_file</mat-icon>
+        <span matListItemTitle>Files</span>
       </mat-list-item>
       <mat-list-item routerLink="dates" routerLinkActive="active" style="border-left-color:#00ff69;">
-        <mat-icon matListIcon>update</mat-icon>
-        <h1 matLine>Dates</h1>
+        <mat-icon matListItemIcon>update</mat-icon>
+        <span matListItemTitle>Dates</span>
       </mat-list-item>
     </mat-nav-list>
   </mat-sidenav>
@@ -34,7 +34,7 @@
     <mat-toolbar>
       <mat-toolbar-row>
         <mat-icon>{{(pageInfo$|async)?.pageIcon}}</mat-icon>
-        <h1 style="margin-left:8px;">{{(pageInfo$|async)?.pageTitle}}</h1>
+        <h1 style="margin-left:8px;margin-bottom:0;">{{(pageInfo$|async)?.pageTitle}}</h1>
       </mat-toolbar-row>
     </mat-toolbar>
 
